Try again to fix the Firefox wrapping bug

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -220,6 +220,7 @@ h1.name {
 
 .navigation-list {
     margin: 0.25em 0;
+    white-space: nowrap; // Prevents an overflow wrapping bug in Firefox.
 }
 
 .navigation-list a {
